Fix #4577: nicer highlight of the field on Safari

--- a/form-runner/jvm/src/main/assets/xbl/orbeon/dropdown-select1-search/dropdown-select1-search.less
+++ b/form-runner/jvm/src/main/assets/xbl/orbeon/dropdown-select1-search/dropdown-select1-search.less
@@ -13,8 +13,16 @@
 .orbeon {
     .select2-container {
         ul                 { margin: initial }
-        .select2-selection { border: 1px solid #ccc } // Be consistent with border of other form controls
-        .select2-dropdown  { z-index: 9999999 }       // Dropdown to be always above everything else
+        .select2-selection {
+            // Be consistent with border of other form controls
+            border: 1px solid #ccc;
+            // Select2 sets `line-height: 28px`, which is 2px too much, since the parent also
+            // has a `line-height: 28px` and a `border: 1px`, which caused an irregularity in
+            // the bottom part of the highlight on Safari
+            .select2-selection__rendered { line-height: 26px }
+        }
+        // Dropdown to be always above everything else
+        .select2-dropdown  { z-index: 9999999 }
     }
     .select2-selection__clear {
         // Better alignment of the clear icon with the selection / arrow down icon
